<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!--<string name="app_name">IoT</string>-->

    <!-- sub_project5-->
    <!-- Strings related to login -->
    <string name="prompt_email">Account:Email</string>
    <string name="register">註冊</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions. </string>

    <!-- Strings related to register -->
    <string name="account">Account:Email</string>
    <string name="password">Password</string>
    <string name="confirmationpassword">Confirmation password</string>
    <string name="name">Name</string>
    <string name="submit">確認</string>

    <!-- Strings related to sensor -->
    <string name="realtime">即時資料</string>
    <string name="history">歷史資料</string>
    <string name="privacy">隱私政策</string>
    <string name="action_Signout">登出</string>

    <!--sub_project1-->
    <string name="txt_resend_captcha"><u>沒有收到驗證信嗎？要求重送</u></string>

    <!-- Strings related to login -->
    <!--
<string name="prompt_email">Account</string>
<string name="register">註冊</string>
<string name="prompt_password">Password (optional)</string>
<string name="action_sign_in">登入</string>
<string name="action_sign_in_short">Sign in</string>
<string name="error_invalid_email">This email address is invalid</string>
<string name="error_invalid_password">This password is too short</string>
<string name="error_incorrect_password">This password is incorrect</string>
<string name="error_field_required">This field is required</string>
<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
   -->
    <!-- Strings related to register -->
    <!--
<string name="account">Account</string>
<string name="password">Password</string>
<string name="confirmationpassword">Confirmation password</string>
<string name="email">E-mail</string>
<string name="submit">確認</string>
-->

    <string-array name="statistic_topic">
        <item>Frequency</item>
        <item>Block Frequency</item>
        <item>Cusum-Forward</item>
        <item>Cusum-Reverse</item>
        <item>Runs</item>
        <item>Long Runs of Ones</item>
        <item>Rank</item>
        <item>Spectral DFT</item>
        <item>Non-overlapping Templates</item>
        <item>Overlapping Templates</item>
        <item>Universal</item>
        <item>Approximate Entropy</item>
        <item>Random Excursions</item>
        <item>Random Excursions Variant</item>
        <item>Linear Complexity</item>
        <item>Serial</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
